--- a/sass/_navBar.scss
+++ b/sass/_navBar.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 15;
   .container {
     display: flex;
     padding-inline-start: 20%;
@@ -17,6 +17,7 @@
   .contact_details {
     display: flex;
     align-items: center;
+    margin-top: 0;
     .email {
       color: $SecondText;
       font-size: 0.8rem;
@@ -111,7 +112,7 @@
 .navbar {
   margin-top: 3.5rem;
   position: relative;
-  z-index: 10;
+  z-index: 20;
   .navbar-brand {
     margin-inline-end: 5rem;
     .logo {
