--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -1,5 +1,10 @@
 /* ======= Mobile ======= */
 @media only screen and (max-width: 600px) {
+  .auth {
+    .auth_card {
+      width: 90%;
+    }
+  }
   .header {
     height: 50vh;
     .text_header {
