--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -1,5 +1,15 @@
 /* ======= Tablet ======= */
 @media only screen and (max-width: 991.98px) {
+  .auth {
+    .auth_card {
+      width: 70%;
+      .form-group {
+        svg {
+          left: 1rem;
+        }
+      }
+    }
+  }
   .services {
     .text_section {
       width: 70%;
@@ -139,14 +149,35 @@
     .service_detials .info .img_collect img {
       height: 150px;
     }
-  .service_detials .info ul li{
-    width: 95%;
-    padding-inline-start: 10%;
+    .service_detials .info ul li {
+      width: 95%;
+      padding-inline-start: 10%;
+    }
+    .service_detials .info .img_collect img {
+      height: 150px;
+    }
+  }
+  .contact_sec {
+    .container {
+      padding: 2rem;
+    }
+  }
+  .header_blog {
+    .main_content_start {
+      p {
+        width: 50%;
+      }
+    }
+  }
 
+  .contact_details {
+    flex-direction: column;
+    .contact_details_card {
+      width: 100%;
+    }
+    iframe {
+      width: 100%;
+    }
   }
-  .service_detials .info .img_collect img {
-    height: 150px;
-  }
-}
 }
 /* ======= Tablet ======= */
