--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -179,5 +179,34 @@
       width: 100%;
     }
   }
+  .profile {
+    .sidebar_profile {
+      margin-bottom: 1.5rem;
+    }
+    .profile_section {
+      .tab-content {
+        .tab-pane {
+          .card_appointments {
+            flex-direction: column;
+            padding-bottom: 1.5rem;
+            img {
+              width: 100%;
+              height: 250px;
+              margin-inline-end: 0;
+              margin-bottom: 1rem;
+              border-radius: 12px 12px 0 0;
+            }
+            .details_card_appointments {
+              width: 100%;
+              padding: 0 1rem;
+            }
+            .book {
+              margin: 1rem auto 0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 /* ======= Tablet ======= */
