--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4119,9 +4119,9 @@ form.form_contact {
           font-size: 1rem;
           font-family: "semibold";
           color: $PrimaryText;
-          svg {
-            margin-inline-start: 46%;
-          }
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
         }
       }
       li.active {
@@ -4284,12 +4284,12 @@ form.form_contact {
       flex-wrap: wrap;
       li {
         width: 45%;
-        font-size: 1rem;
+        font-size: .8rem;
         color: $PrimaryText;
         font-family: "regular";
         margin-bottom: 3%;
         position: relative;
-        padding-inline-start: 5%;
+        padding-inline-start: 2rem;
         &::before {
           content: url("../media/image/ok.png");
           position: absolute;
@@ -4304,9 +4304,12 @@ form.form_contact {
       flex-wrap: wrap;
       margin: 2% 0 4%;
       img {
-        width: 45%;
+        width: 48%;
         height: 200px;
-        margin: 0 2%;
+        margin-inline-end: 2%;
+        &:last-child {
+          margin-inline-end: 0;
+        }
       }
     }
   }
