--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1619,10 +1619,10 @@ a {
                 color: #5b6152;
                 font-family: "regular";
                 border-radius: 5px;
-                padding: 0.5rem;
+                padding: 0.5rem 0.2rem;
                 width: 100%;
                 text-align: center;
-                font-size: 0.8rem;
+                font-size: 0.6rem;
                 border: 1px solid #f0f0f0;
               }
               .form-check-input {
@@ -2780,16 +2780,34 @@ a {
     .location {
       padding: 1.5rem;
       border-bottom: 0.7px solid #bdbdbd;
-      svg {
-        color: $PrimaryColor;
-        margin-inline-end: 0.5rem;
-      }
-      span {
-        font-family: "regular";
-        color: $PrimaryText;
-        font-size: 0.9rem;
+      .drop {
+        display: flex;
+        align-items: center;
         margin-bottom: 1rem;
-        display: inline-block;
+        svg {
+          color: $PrimaryColor;
+          margin-inline-end: 0.5rem;
+        }
+        .bootstrap-select {
+          .dropdown-toggle {
+            background-color: transparent;
+            border-radius: 4px;
+            border: 0.7px solid #c2c2c2;
+            padding: 0.4rem;
+            .filter-option {
+              .filter-option-inner {
+                font-size: 0.8rem;
+                font-family: "regular";
+              }
+            }
+          }
+          .dropdown-menu {
+            .dropdown-item {
+              font-family: "regular";
+              font-size: 0.8rem;
+            }
+          }
+        }
       }
       iframe {
         width: 100%;
@@ -2877,10 +2895,10 @@ a {
                 color: #5b6152;
                 font-family: "regular";
                 border-radius: 5px;
-                padding: 0.5rem;
+                padding: 0.5rem 0.2rem;
                 width: 100%;
                 text-align: center;
-                font-size: 0.8rem;
+                font-size: 0.6rem;
                 border: 1px solid #f0f0f0;
               }
               .form-check-input {
